--- a/참고용/MyFirstConsoleGame_0/MyFirstConsoleGame_0.vcxproj
+++ b/참고용/MyFirstConsoleGame_0/MyFirstConsoleGame_0.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>17.0</VCProjectVersion>
+    <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{cb804815-d145-496a-a099-6a1b0ac2ea6f}</ProjectGuid>
-    <RootNamespace>Colosseum</RootNamespace>
+    <ProjectGuid>{64c2eb4b-5321-41a8-8e3d-5c70eb28bf7e}</ProjectGuid>
+    <RootNamespace>MyFirstConsoleGame0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,13 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.cpp" />
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.cpp" />
-    <ClCompile Include="Colosseum.cpp" />
+    <ClCompile Include="InputSystem.cpp" />
+    <ClCompile Include="MyFirstConsoleGame_0.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.h" />
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.h" />
+    <ClInclude Include="InputSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
