--- a/참고용/MyFirstConsoleGame_1/MyFirstConsoleGame_1.vcxproj
+++ b/참고용/MyFirstConsoleGame_1/MyFirstConsoleGame_1.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>17.0</VCProjectVersion>
+    <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{cb804815-d145-496a-a099-6a1b0ac2ea6f}</ProjectGuid>
-    <RootNamespace>Colosseum</RootNamespace>
+    <ProjectGuid>{166be166-950a-41b4-b3b5-aea52d2bb256}</ProjectGuid>
+    <RootNamespace>MyFirstConsoleGame1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,13 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.cpp" />
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.cpp" />
-    <ClCompile Include="Colosseum.cpp" />
+    <ClCompile Include="InputSystem.cpp" />
+    <ClCompile Include="MyFirstConsoleGame_1.cpp" />
+    <ClCompile Include="RenderSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.h" />
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.h" />
+    <ClInclude Include="InputSystem.h" />
+    <ClInclude Include="RenderSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
