--- a/참고용/MyFirstConsoleGame_1/MyFirstConsoleGame_1.vcxproj.filters
+++ b/참고용/MyFirstConsoleGame_1/MyFirstConsoleGame_1.vcxproj.filters
@@ -15,21 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Colosseum.cpp">
+    <ClCompile Include="MyFirstConsoleGame_1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.cpp">
+    <ClCompile Include="InputSystem.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.cpp">
+    <ClCompile Include="RenderSystem.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.h">
+    <ClInclude Include="RenderSystem.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.h">
+    <ClInclude Include="InputSystem.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
