--- a/Colosseum/Colosseum.vcxproj.filters
+++ b/Colosseum/Colosseum.vcxproj.filters
@@ -18,18 +18,12 @@
     <ClCompile Include="Colosseum.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.cpp">
+    <ClCompile Include="GameSystem.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\InputSystem.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\참고용\MyFirstConsoleGame_1\RenderSystem.h">
+    <ClInclude Include="GameSystem.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
