--- a/Colosseum(BackUp)/Colosseum.vcxproj
+++ b/Colosseum(BackUp)/Colosseum.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{cb804815-d145-496a-a099-6a1b0ac2ea6f}</ProjectGuid>
     <RootNamespace>Colosseum</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Colosseum(BackUp)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
