--- a/Colosseum/Colosseum.vcxproj.filters
+++ b/Colosseum/Colosseum.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClInclude Include="Define.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Colosseum.h">
+    <ClInclude Include="CharacterLocal.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
