--- a/Colosseum/Colosseum.vcxproj
+++ b/Colosseum/Colosseum.vcxproj
@@ -133,7 +133,7 @@
     <ClCompile Include="RenderSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Colosseum.h" />
+    <ClInclude Include="CharacterLocal.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="InputSystem.h" />
     <ClInclude Include="Player.h" />
